--- a/つくる2.html
+++ b/つくる2.html
@@ -59,7 +59,7 @@
               <img src="https://prog-8.com/images/html/advanced/jQuery.png">
               <p>自作ゲーム紹介</p>
             </div>
-            <p class="txt-contents">ついに私が作ってしまったので、ぜひ見てほしいです。</p>
+            <p class="txt-contents">ついに私が作ってしまったので、ぜひ見ていただきたいです。</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
