--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
           <div class="logo">まえだんごのブログ</div>
         </div>
         <div class="header-right">
+          <a href="#">レッスン</a>
+          <a href="#">新規登録</a>
           <a href="#" class="login">ログイン</a>
         </div>
       </div>
@@ -29,7 +31,7 @@
         <p>このサイトは練習用です。</p>
         <div class="btn-wrapper">
           <a href="" class="btn signup">新規登録はこちら</a>
-          <p>or sign up with</p>
+          <p>or</p>
           <a href="#" class="btn facebook">
             <span class="fa fa-facebook"></span>
             Facebookで登録
