--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
+
+    <!--外部サイトより-->
+    <script type="text/javascript" src="index.js"></script>
+
   </head>
   <body>
     <!-- ここにコードを書いていきましょう -->
@@ -36,7 +40,7 @@
             <span class="fa fa-facebook"></span>
             Facebookで登録
           </a>
-          <a href="#" class="btn twitter">
+          <a href="https://twitter.com/BornettyStrasse" class="btn twitter">
             <span class="fa fa-twitter"></span>
             Twitterで登録
           </a>
