--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>気軽に立ち寄れるようなサイトを目指しています。</p>
         <p>このサイトは練習用です。</p>
         <div class="btn-wrapper">
-          <a href="" class="btn signup">新規登録はこちら</a>
+          <a href="#" class="btn signup">新規登録はこちら</a>
           <p>or</p>
           <a href="#" class="btn facebook">
             <span class="fa fa-facebook"></span>
