--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <p>気軽に立ち寄れるようなサイトを目指しています。</p>
         <p>このサイトは練習用です。</p>
         <div class="btn-wrapper">
-          <a href="#" class="btn signup">新規登録はこちら</a>
+          <a href="https://broatis.github.io/Test1" class="btn signup">新規登録はこちら</a>
           <p>or</p>
-          <a href="#" class="btn facebook">
+          <a href="https://www.google.co.jp" class="btn facebook">
             <span class="fa fa-facebook"></span>
             Facebookで登録
           </a>
